[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Ryan", email = "ryan.ratcliff@lifeomic.com"},
]
license-expression = "MIT"
dependencies = []
requires-python = ">=3.9"

[project.urls]
Homepage = ""

[build-system]
requires = ["pdm-pep440"]
build-backend = "pdm.pep440.api"

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "pytest==6.2",
    "pytest-cov==2.12",
    "black==22.3.0"
]

[tool.pdm.scripts]
test = "python -m pytest --cov-report term-missing --cov=src --log-level=INFO tests/"
process = "python -m src"
lint = "black --check tests/ src/"
lint-fix = "black tests/ src/"